Fixed layout on mobile devices

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Roboto', sans-serif;
     max-width: 500px;
     margin: auto;
-    padding-top: 15px;
+    padding: 15px;
 }
 
 p{
